# applicative-presentation

./: .gitignore  Makefile  README.md  applicative.tex
dotsrc/: dependencies-applicative.dot  dependencies-monad.dot  dependencies.dot
examples/: Examples.cabal  LICENSE
examples/src/: Main.hs
examples/src/Examples/Applicative/: Simple.hs
examples/src/Examples/Functor/: Simple.hs
examples/src/Web/: MaybeResult.hs  Request.hs  RequestReader.hs  Response.hs
src/: ApplicBuildName.hs  ApplicDesired.hs  ApplicNice.hs  ApplicSweet.hs  Applicative.hs  ApplicativeHandler.hs  ApplicativeLaws.hs  CAI1.hs  CAI1ex.hs  CAI2.hs  CAI2ex.hs  CAI3.hs  CAI3ex.hs  CAI4.hs  CAI4ex.hs  CFI1.hs  CFI1ex.hs  CFI2.hs  CFI2ex.hs  CFI3.hs  CFI3ex.hs  CFI4.hs  CFI4ex.hs  Foldable.hs  Functor.hs  FunctorLaws.hs  MaybeResult.hs  MaybeResultApplicative.hs  MonadReader.hs  MonadReaderRun.hs  Monoid.hs  Pointed.hs  Reader.hs  Request.hs  RequestReader.hs  Response.hs  Traversable.hs  TraversableFail.hs  TraversableSuccess.hs
